# homekit-accessory-sample-raspberrypi

./: CMakeLists.txt  README.md  build.sh
source/: CMakeLists.txt  DeviceMonitor.c  HomeKitStack.c  main.c
tinyhap/include/hap-tcp/: HapPersistence.h
